k8s/2.nginx-ingress-controller/patch.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: svc
spec:
  externalTrafficPolicy: Local
