k8s/2.nginx-ingress-controller/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /test
            backend:
              serviceName: svc
              servicePort: 80
